# cam-chat

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  nginx.conf
backend/: .env  .gitignore  Cargo.toml  Dockerfile  README.md  database.py  docker-compose.yml  integration_guide.md  requirements.txt  server.py  start_dev.sh  test_api.sh
backend/migrations/: 20240101000001_create_users_table.sql  20240101000002_create_chats_table.sql  20240101000003_create_messages_table.sql
backend/src/: main.rs
backend/src/auth/: mod.rs
backend/src/db/: mod.rs
backend/src/models/: chat.rs  message.rs  mod.rs  user.rs
backend/src/routes/: auth.rs  chats.rs  messages.rs  mod.rs
backend/src/ws/: mod.rs
frontend/: .env  package.json  tailwind.config.js
frontend/src/: App.css  App.js  index.css
frontend/src/components/: ChatItem.js  ChatLayout.js  ChatList.js  ChatPane.js  ChatWindow.js  Login.js  MessageBubble.js  MessageInput.js  MessageList.js  PrivateRoute.js  Sidebar.js
frontend/src/context/: AuthContext.js  ChatContext.js  LayoutContext.js  ThemeContext.js
frontend/src/services/: api.js  websocket.js
